# sdl2-helloworld

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  MyApplication.cpp  MyApplication.h  main.cpp
source/app/: AppCore.cpp  AppCore.h  CMakeLists.txt  SysAudio.cpp  SysFont.cpp  SysFont.h  SysSprite.cpp  SysSprite.h  SysTimer.cpp  stdafx.h
source/core/: AppCore.h  SysAudio.cpp  SysAudio.h  SysCore.cpp  SysCore.h  SysFont.h  SysSprite.cpp  SysSprite.h  SysTimer.h  stdafx.h
source/tests/: CMakeLists.txt  TestMain.cpp  run-tests.bat  run-tests.sh
