FILE (GLOB TEST_SOURCES *.cpp)
INCLUDE_DIRECTORIES (${BUILD_ENV_LIB}/UnitTest++/src/ ${PROJECT_SOURCE_DIR}/source/app ${PROJECT_BINARY_DIR}/source/app ${PROJECT_SOURCE_DIR}/source/tests/mocks)
ADD_EXECUTABLE (test${MY_PROJECT_NAME}-bin ${TEST_SOURCES})
TARGET_LINK_LIBRARIES (test${MY_PROJECT_NAME}-bin ${MY_PROJECT_NAME}-lib ${BUILD_ENV_LIB}/UnitTest++/libUnitTest++.a)

# Run the test executable.
IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run-tests.sh ${PROJECT_BINARY_DIR})
EXECUTE_PROCESS(COMMAND chmod +x ${PROJECT_BINARY_DIR}/run-tests.sh)
ADD_CUSTOM_COMMAND(TARGET test${MY_PROJECT_NAME}-bin POST_BUILD COMMAND ${PROJECT_BINARY_DIR}/run-tests.sh ARGS ${PROJECT_BINARY_DIR}/test${MY_PROJECT_NAME}-bin VERBATIM)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

IF(WIN32)
EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run-tests.bat ${PROJECT_BINARY_DIR})
ADD_CUSTOM_COMMAND(TARGET test${MY_PROJECT_NAME}-bin POST_BUILD COMMAND ${PROJECT_BINARY_DIR}/run-tests.bat ARGS ${PROJECT_BINARY_DIR}/test${MY_PROJECT_NAME}-bin VERBATIM)
ENDIF(WIN32)